package com.thoughtworks.parkinglot.parkingcontext.domain.parking;

public interface ParkingLotFinderSpecification {
    ParkingLotFinder findParkingLotFinder(ParkingLotFinderFactory parkingLotFinderFactory);
}
